[package]
name        = "lightning"
description = "Lightning Network transport layer for private VUSD transfers"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true

[dependencies]
vscx-core    = { path = "../vscx-core" }
privacy      = { path = "../privacy" }
oracle       = { path = "../oracle" }
taproot-vault = { path = "../taproot-vault" }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
dashmap      = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
curve25519-dalek = { workspace = true }
reqwest      = { workspace = true }
