[package]
name        = "oracle"
description = "VSCx Oracle Network — 5-of-7 threshold BIP-340 Schnorr price aggregation"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vscx-core   = { path = "../vscx-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
rand        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
parking_lot = { workspace = true }
secp256k1   = { workspace = true }
reqwest     = { workspace = true }
