[package]
name        = "taproot-vault"
description = "Taproot MAST construction and Bitcoin L1 interaction for VSCx vaults"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true

[dependencies]
vscx-core    = { path = "../vscx-core" }
serde        = { workspace = true }
sha2         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
bitcoin      = { workspace = true }
secp256k1    = { workspace = true }
reqwest      = { workspace = true }
serde_json   = { workspace = true }
