[package]
name        = "vscx-core"
description = "VSCx vault state machine — the core engine of the VUSD protocol"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
dashmap      = { workspace = true }
parking_lot  = { workspace = true }
zeroize      = { workspace = true }
secp256k1    = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
